update: 调试打包静态文件集中到 public/dev-build 目录下

--- a/public/dev-build/index-ios.html
+++ b/public/dev-build/index-ios.html
@@ -25,6 +25,6 @@
     <div id="app"></div>
 
     <!-- cordova.js -->
-    <script src="ios/cordova.js"></script>
+    <script src="dev-build/ios/cordova.js"></script>
   </body>
 </html>
