--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
       * Enable inline JS: add 'unsafe-inline' to default-src
     -->
+    <!-- 调试模式下 platform===browser 时禁用网页端 CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -24,7 +25,7 @@
     <!-- built files will be auto injected -->
     <div id="app"></div>
 
-    <!-- cordova.js -->
+    <!-- 引入 cordova.js -->
     <script src="cordova.js"></script>
   </body>
 </html>
